--- a/views/common/traveltable.ejs
+++ b/views/common/traveltable.ejs
@@ -4,7 +4,7 @@
                 <div class="col-lg-4 col-md-4 col-sm-6">
                     <div class="tm-home-box-1 tm-home-box-1-2 tm-home-box-1-center">
                         <img src="img/index-01.jpg" alt="image" class="img-responsive">
-                        <a href="#">
+                        <a href="/redirect2">
                             <div class="tm-green-gradient-bg tm-city-price-container">
                                 <span>New York</span>
                                 <span>$6,600</span>
@@ -16,7 +16,7 @@
         <div class="col-lg-4 col-md-4 col-sm-6">
             <div class="tm-home-box-1 tm-home-box-1-2 tm-home-box-1-center">
                 <img src="img/index-01.jpg" alt="image" class="img-responsive">
-                <a href="#">
+                <a href="/redirect2">
                     <div class="tm-green-gradient-bg tm-city-price-container">
                         <span>New York</span>
                         <span>$6,600</span>
@@ -27,7 +27,7 @@
         <div class="col-lg-4 col-md-4 col-sm-6">
             <div class="tm-home-box-1 tm-home-box-1-2 tm-home-box-1-right">
                 <img src="img/index-02.jpg" alt="image" class="img-responsive">
-                <a href="#">
+                <a href="/redirect2">
                     <div class="tm-red-gradient-bg tm-city-price-container">
                         <span>Paris</span>
                         <span>$4,200</span>
