--- a/views/redirectpage2.ejs
+++ b/views/redirectpage2.ejs
@@ -58,7 +58,7 @@
         </div>
     </section>
 
-    <a href="/redirect" class="tm-tours-box-2-link">Book Now</a>
+    <a href="/payment" class="tm-tours-box-2-link">Book Now</a>
 
 
 
