in admin part data renamed as admin data

--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -196,7 +196,7 @@
   
     <div class="container pt-4">
       <div id="home">
-        <h1>hiii admin &nbsp; <%=data.name%></h1>
+        <h1>hiii admin &nbsp; <%=admindata.name%></h1>
       </div>
       
 
