--- a/views/about.ejs
+++ b/views/about.ejs
@@ -91,7 +91,7 @@
 				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 					<div class="tm-about-box-1">
 						<a href="#"><img src="img/about-4.jpg" alt="img" class="tm-about-box-1-img"></a>
-						<h3 class="tm-about-box-1-title">Thomas <span>( Founder )</span></h3>
+						<h3 class="tm-about-box-1-title">Souvick <span>( Founder )</span></h3>
 						<p class="margin-bottom-15 gray-text">Proin gravida nibhvell aliquet. Aenean sollicitudin bibum auctor nisi elit.</p>
 						<div class="gray-text">
 							<a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
@@ -104,7 +104,7 @@
 				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 					<div class="tm-about-box-1">
 						<a href="#"><img src="img/about-5.jpg" alt="img" class="tm-about-box-1-img"></a>
-						<h3 class="tm-about-box-1-title">Keith <span>( Co-Founder )</span></h3>
+						<h3 class="tm-about-box-1-title">Shruti <span>( Co-Founder )</span></h3>
 						<p class="margin-bottom-15 gray-text">Proin gravida nibhvell aliquet. Aenean sollicitudin bibum auctor nisi elit.</p>
 						<div class="gray-text">
 							<a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
@@ -117,7 +117,7 @@
 				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 					<div class="tm-about-box-1">
 						<a href="#"><img src="img/about-6.jpg" alt="img" class="tm-about-box-1-img"></a>
-						<h3 class="tm-about-box-1-title">John <span>( General Manager )</span></h3>
+						<h3 class="tm-about-box-1-title">Aurojit <span>( General Manager )</span></h3>
 						<p class="margin-bottom-15 gray-text">Proin gravida nibhvell aliquet. Aenean sollicitudin bibum auctor nisi elit.</p>
 						<div class="gray-text">
 							<a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
@@ -130,7 +130,7 @@
 				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 					<div class="tm-about-box-1">
 						<a href="#"><img src="img/about-7.jpg" alt="img" class="tm-about-box-1-img"></a>
-						<h3 class="tm-about-box-1-title">Smith <span>( Manager )</span></h3>
+						<h3 class="tm-about-box-1-title">Sandip <span>( Manager )</span></h3>
 						<p class="margin-bottom-15 gray-text">Proin gravida nibhvell aliquet. Aenean sollicitudin bibum auctor nisi elit.</p>
 						<div class="gray-text">
 							<a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
