booking with trvelcms

--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -79,6 +79,24 @@
            class="list-group-item list-group-item-action py-2 ripple"
            ><i class="fas fa-users fa-fw me-3"></i><span>Users</span></a
           >
+
+          <a
+           href="/admin/booking"
+           class="list-group-item list-group-item-action py-2 ripple"
+           ><i class="fas fa-users fa-fw me-3"></i><span>booking history</span></a
+          >
+
+          <a
+           href="/admin/tourscms"
+           class="list-group-item list-group-item-action py-2 ripple"
+           ><i class="fas fa-users fa-fw me-3"></i><span>Tour cms</span></a
+          >
+          <a
+           href="/admin/showtourscms"
+           class="list-group-item list-group-item-action py-2 ripple"
+           ><i class="fas fa-users fa-fw me-3"></i><span>Show Tour cms</span></a
+          >
+          
         <a
            href="/admin/reviews"
            class="list-group-item list-group-item-action py-2 ripple"
