--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -4,81 +4,72 @@
 
 <body>
 	<!-- Header -->
-	<%-include('common/nav')%>
+	<div class="tm-header">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-6 col-md-4 col-sm-3 tm-site-name-container">
+                  <a href="/" class="tm-site-name">Holiday</a>	
+              </div>
+              <div class="col-lg-6 col-md-8 col-sm-9">
+                  <div class="mobile-menu-icon">
+                  <i class="fa fa-bars"></i>
+                </div>
+                  <nav class="tm-nav">
+                    <ul>
+                       <li><a href="/">Home</a></li>
+                        <li><a href="/tour">Our Tours</a></li>
+                        <li><a href="/about">About</a></li>
+                        <li><a href="/contact">Login</a></li>
+                      </ul>
+                </nav>		
+              </div>				
+          </div>
+      </div>
 
-    <div class="container" style="padding-top: 72px;">
+    <div class="container-fluid" style="padding-top: 72px;">
         <div class='row'>
             <div class='col-md-4'></div>
             <div class='col-md-4'>
-              <script src='https://js.stripe.com/v2/' type='text/javascript'></script>
-              <form accept-charset="UTF-8" action="/" class="require-validation" data-cc-on-file="false" data-stripe-publishable-key="pk_bQQaTxnaZlzv4FnnuZ28LFHccVSaj" id="payment-form" method="post"><div style="margin:0;padding:0;display:inline;"><input name="utf8" type="hidden" value="✓" /><input name="_method" type="hidden" value="PUT" /><input name="authenticity_token" type="hidden" value="qLZ9cScer7ZxqulsUWazw4x3cSEzv899SP/7ThPCOV8=" /></div>
+              <!-- <script src='https://js.stripe.com/v2/' type='text/javascript'></script> -->
+
+              <form action="/paymentdata" method="post"><div style="margin:0;padding:0;display:inline;"></div>
                 <div class='form-row'>
                   <div class='col-xs-12 form-group required'>
                     <label class='control-label'>Name</label>
-                    <input class='form-control' size='4' type='text'>
+                    <input class='form-control' name="name" size='4' type='text'>
                   </div>
                 </div>
                 <div class='form-row'>
                   <div class='col-xs-12 form-group required'>
                     <label class='control-label'>Email</label>
-                    <input class='form-control' size='4' type='text'>
+                    <input class='form-control' name="email" size='4' type='text'>
                   </div>
                 </div>
                  <div class='form-row'>
                   <div class='col-xs-12 form-group required'>
                     <label class='control-label'>Phone</label>
-                    <input class='form-control' size='4' type='text'>
+                    <input class='form-control' name="phone" size='4' type='text'>
                   </div>
                 </div>
                 <div class='form-row'>
                   <div class='col-xs-12 form-group required'>
-                    <label class='control-label'>Name on Card</label>
-                    <input class='form-control' size='4' type='text'>
-                  </div>
-                </div>
-                
-                <div class='form-row'>
-                  <div class='col-xs-12 form-group card required'>
-                    <label class='control-label'>Card Number</label>
-                    <input autocomplete='off' class='form-control card-number' size='20' type='text'>
-                  </div>
-                </div>
-
-                
-                <div class='form-row'>
-                  <div class='col-xs-4 form-group cvc required'>
-                    <label class='control-label'>CVC</label>
-                    <input autocomplete='off' class='form-control card-cvc' placeholder='ex. 311' size='4' type='text'>
-                  </div>
-                  <div class='col-xs-4 form-group expiration required'>
-                    <label class='control-label'>Expiration</label>
-                    <input class='form-control card-expiry-month' placeholder='MM' size='2' type='text'>
-                  </div>
-                  <div class='col-xs-4 form-group expiration required'>
-                    <label class='control-label'> </label>
-                    <input class='form-control card-expiry-year' placeholder='YYYY' size='4' type='text'>
+                    <label class='control-label'>Package Name</label>
+                    <input class='form-control' name="packagename" size='4' type='text'>
                   </div>
                 </div>
                 <div class='form-row'>
-                  <div class='col-md-12'>
-                    <div class='form-control total btn btn-info'>
-                      Total:
-                      <span class='amount'>$300</span>
-                    </div>
+                  <div class='col-xs-12 form-group required'>
+                    <label class='control-label'>Number of Travelers</label>
+                    <input class='form-control' name="personcount" size='4' type='text'>
                   </div>
                 </div>
+                 
                 <div class='form-row'>
                   <div class='col-md-12 form-group'>
-                    <button class='form-control btn btn-primary submit-button' type='submit'>Pay »</button>
+                    <button class='form-control btn btn-primary submit-button' type='submit'>book »</button>
                   </div>
                 </div>
-                <div class='form-row'>
-                  <div class='col-md-12 error form-group hide'>
-                    <div class='alert-danger alert'>
-                      Please correct the errors and try again.
-                    </div>
-                  </div>
-                </div>
+               
               </form>
             </div>
             <div class='col-md-4'></div>
@@ -88,7 +79,7 @@
 	
 
 	<!-- gray bg -->	
-    <div style="padding-top: 48px;">
+    <div style="padding-top: 285px;">
         <%-include('common/footer')%>
     </div>
 	<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>      		<!-- jQuery -->
