adding some dynamic datas

--- a/views/showtoursCMS.ejs
+++ b/views/showtoursCMS.ejs
@@ -148,6 +148,7 @@
                         <th scope="col">Duration</th>
                         <th scope="col">Price</th>
                         <th scope="col">Person Count</th>
+                        <th scope="col">Ourtour Description</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -166,10 +167,13 @@
                                 <%=result.duration%>
                             </td>
                             <td>
-                                <%=result.Price%>
+                                <%=result.price%>
                             </td>
                             <td>
                                 <%=result.personcount%>
+                            </td>
+                            <td>
+                                <%=result.ourtourdescription%>
                             </td>
                             
                         </tr>
