--- a/views/toursCMS.ejs
+++ b/views/toursCMS.ejs
@@ -168,6 +168,11 @@
                     <label for="exampleInputEmail1" class="form-label">Person Count</label>
                     <input type="text" class="form-control" name="personcount" id="exampleInputEmail1">
                 </div>
+                
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Ourtour Description</label>
+                    <input type="text" class="form-control" name="ourtourdescription" id="exampleInputEmail1">
+                </div>
 
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
