--- a/views/tours.ejs
+++ b/views/tours.ejs
@@ -4,7 +4,28 @@
 
   <body class="tm-gray-bg">
   	<!-- Header -->
-  	<%-include('common/nav')%>
+	  <div class="tm-header">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 col-md-4 col-sm-3 tm-site-name-container">
+					<a href="/" class="tm-site-name">Holiday</a>	
+				</div>
+				<div class="col-lg-6 col-md-8 col-sm-9">
+					<div class="mobile-menu-icon">
+					<i class="fa fa-bars"></i>
+				  </div>
+					<nav class="tm-nav">
+					  <ul>
+						 <li><a href="/">Home</a></li>
+						  <li><a href="/tour">Our Tours</a></li>
+						  <li><a href="/about">About</a></li>
+						  <li><a href="/contact">Login</a></li>
+						</ul>
+				  </nav>		
+				</div>				
+			</div>
+		</div>
+		</div>
 	
 	<!-- Banner -->
 	<%-include('common/slider')%>
@@ -23,163 +44,37 @@
 				</div>
 			</div>
 			<div class="row">
+
+				<%for(let result of maintourdata) {%>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 					<div class="tm-tours-box-1">
 						<img src="img/tours-03.jpg" alt="image" class="img-responsive">
 						<div class="tm-tours-box-1-info">
 							<div class="tm-tours-box-1-info-left">
-								<p class="text-uppercase margin-bottom-20">Proin Gravida Nibhvel Lorem Quis Bind</p>	
-								<p class="gray-text">28 March 2084</p>
+								<p class="text-uppercase margin-bottom-20"> <%=result.placename%> </p>	
+								<p class="gray-text"><%=result.startingdate%></p>
+								<p class="gray-text">Number of Travelers : <%=result.personcount%> person</p>
 							</div>
 							<div class="tm-tours-box-1-info-right">
-								<p class="gray-text tours-1-description">Lorem quis bibendum auctor, nisi elit consequat ipsum, sec sagittis sem nibh id elit.</p>	
+								<p class="gray-text tours-1-description"><%=result.ourtourdescription%>	
 							</div>							
 						</div>
 						<div class="tm-tours-box-1-link">
 							<div class="tm-tours-box-1-link-left">
-								Duration: 8 days
+								Duration: <%=result.duration%>
 							</div>
 							<a href="/redirect" class="tm-tours-box-1-link-right">
-								$2,200								
+								<p>RS <%=result.price%></p>						
 							</a>							
 						</div>
 					</div>					
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-					<div class="tm-tours-box-1">
-						<img src="img/tours-04.jpg" alt="image" class="img-responsive">
-						<div class="tm-tours-box-1-info">
-							<div class="tm-tours-box-1-info-left">
-								<p class="text-uppercase margin-bottom-20">Proin Gravida Nibhvel Lorem Quis Bind</p>	
-								<p class="gray-text">26 March 2084</p>
-							</div>
-							<div class="tm-tours-box-1-info-right">
-								<p class="gray-text tours-1-description">Lorem quis bibendum auctor, nisi elit consequat ipsum, sec sagittis sem nibh id elit.</p>	
-							</div>							
-						</div>
-						<div class="tm-tours-box-1-link">
-							<div class="tm-tours-box-1-link-left">
-								Duration: 9 days
-							</div>
-							<a href="/redirect" class="tm-tours-box-1-link-right">
-								$1,800								
-							</a>							
-						</div>
-					</div>					
-				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-					<div class="tm-tours-box-1">
-						<img src="img/tours-05.jpg" alt="image" class="img-responsive">
-						<div class="tm-tours-box-1-info">
-							<div class="tm-tours-box-1-info-left">
-								<p class="text-uppercase margin-bottom-20">Proin Gravida Nibhvel Lorem Quis Bind</p>	
-								<p class="gray-text">24 March 2084</p>
-							</div>
-							<div class="tm-tours-box-1-info-right">
-								<p class="gray-text tours-1-description">Lorem quis bibendum auctor, nisi elit consequat ipsum, sec sagittis sem nibh id elit.</p>	
-							</div>							
-						</div>
-						<div class="tm-tours-box-1-link">
-							<div class="tm-tours-box-1-link-left">
-								Duration: 8 days
-							</div>
-							<a href="/redirect" class="tm-tours-box-1-link-right">
-								$1,600								
-							</a>							
-						</div>
-					</div>					
-				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-					<div class="tm-tours-box-1">
-						<img src="img/tours-06.jpg" alt="image" class="img-responsive">
-						<div class="tm-tours-box-1-info">
-							<div class="tm-tours-box-1-info-left">
-								<p class="text-uppercase margin-bottom-20">Proin Gravida Nibhvel Lorem Quis Bind</p>	
-								<p class="gray-text">22 March 2084</p>
-							</div>
-							<div class="tm-tours-box-1-info-right">
-								<p class="gray-text tours-1-description">Lorem quis bibendum auctor, nisi elit consequat ipsum, sec sagittis sem nibh id elit.</p>	
-							</div>							
-						</div>
-						<div class="tm-tours-box-1-link">
-							<div class="tm-tours-box-1-link-left">
-								Duration: 5 days
-							</div>
-							<a href="/redirect" class="tm-tours-box-1-link-right">
-								$1,200								
-							</a>							
-						</div>
-					</div>					
-				</div>
+				<%}%>
 			</div>		
 		</div>
 	</section>		
 	
 	<!-- white bg -->
-	<section class="tm-white-bg section-padding-bottom">
-		<div class="container">
-			<div class="row">
-				<div class="tm-section-header section-margin-top">
-					<div class="col-lg-4 col-md-3 col-sm-3"><hr></div>
-					<div class="col-lg-4 col-md-6 col-sm-6"><h2 class="tm-section-title">Special Packages</h2></div>
-					<div class="col-lg-4 col-md-3 col-sm-3"><hr></div>	
-				</div>				
-			</div>
-			<div class="row">
-				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
-					<div class="tm-tours-box-2">						
-						<img src="img/index-03.jpg" alt="image" class="img-responsive">
-						<div class="tm-tours-box-2-info">
-							<h3 class="margin-bottom-15">Proin Gravida Nibhvel Lorem Quis Bind</h3>
-							<img src="img/rating.png" alt="image" class="margin-bottom-5">
-							<p>28 March 2084</p>	
-						</div>						
-						<a href="/redirect" class="tm-tours-box-2-link">Book Now</a>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
-					<div class="tm-tours-box-2">						
-						<img src="img/index-04.jpg" alt="image" class="img-responsive">
-						<div class="tm-tours-box-2-info">
-							<h3 class="margin-bottom-15">Proin Gravida Nibhvel Lorem Quis Bind</h3>
-							<img src="img/rating.png" alt="image" class="margin-bottom-5">
-							<p>26 March 2084</p>	
-						</div>						
-						<a href="/redirect" class="tm-tours-box-2-link">Book Now</a>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
-					<div class="tm-tours-box-2">						
-						<img src="img/index-05.jpg" alt="image" class="img-responsive">
-						<div class="tm-tours-box-2-info">
-							<h3 class="margin-bottom-15">Proin Gravida Nibhvel Lorem Quis Bind</h3>
-							<img src="img/rating.png" alt="image" class="margin-bottom-5">
-							<p>24 March 2084</p>	
-						</div>						
-						<a href="/redirect" class="tm-tours-box-2-link">Book Now</a>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
-					<div class="tm-tours-box-2">						
-						<img src="img/index-06.jpg" alt="image" class="img-responsive">
-						<div class="tm-tours-box-2-info">
-							<h3 class="margin-bottom-15">Proin Gravida Nibhvel Lorem Quis Bind</h3>
-							<img src="img/rating.png" alt="image" class="margin-bottom-5">
-							<p>22 March 2084</p>	
-						</div>						
-						<a href="/redirect" class="tm-tours-box-2-link">Book Now</a>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12">
-					<p class="home-description">Lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
-					Morbi accumsaipsu m velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat.
-					</p>					
-				</div>
-			</div>	
-		</div>
-	</section>
 	<%-include('common/footer')%>
 
 	<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>      		<!-- jQuery -->
