--- a/views/users.ejs
+++ b/views/users.ejs
@@ -164,7 +164,7 @@
               <%=data._id %>
             </td>
              <td>
-              <%=data._name %>
+              <%=data.name %>
             </td> 
 
             <td>
