--- a/views/common/head.ejs
+++ b/views/common/head.ejs
@@ -7,6 +7,7 @@
   Holiday Template
   http://www.templatemo.com/tm-475-holiday
   -->
+  <base href="/">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700' rel='stylesheet' type='text/css'>
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
