--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
 						<div class="tm-home-box-3-info">
 							<p class="tm-home-box-3-description"><%=result.description%>
 					        <div class="tm-home-box-2-container">
-								<a href="/redirect" class="tm-tours-box-2-link">Book Now</a>
+								<a href="/redirect/<%=result._id%>" class="tm-tours-box-2-link">Book Now</a>
 							</div>
 						</div>						
 					</div>					
