--- a/views/toursCMS.ejs
+++ b/views/toursCMS.ejs
@@ -81,7 +81,6 @@
                 <a href="/admin/showtourscms" class="list-group-item list-group-item-action py-2 ripple"><i
                         class="fas fa-users fa-fw me-3"></i><span>Show Tour cms</span></a>
 
-
                 <!-- <a
            href="/admin/update"
            class="list-group-item list-group-item-action py-2 ripple"
@@ -172,6 +171,11 @@
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Ourtour Description</label>
                     <input type="text" class="form-control" name="ourtourdescription" id="exampleInputEmail1">
+                </div>
+
+               <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label"> Redirect Description</label>
+                    <input type="text" class="form-control" name="redirectdescription" id="exampleInputEmail1">
                 </div>
 
                 <button type="submit" class="btn btn-primary">Submit</button>
