--- a/views/redirectpage.ejs
+++ b/views/redirectpage.ejs
@@ -4,26 +4,49 @@
 
 <body>
 	<!-- Header -->
-	<%-include('common/nav')%>
+	<div class="tm-header">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 col-md-4 col-sm-3 tm-site-name-container">
+					<a href="/" class="tm-site-name">Holiday</a>	
+				</div>
+				<div class="col-lg-6 col-md-8 col-sm-9">
+					<div class="mobile-menu-icon">
+					<i class="fa fa-bars"></i>
+				  </div>
+					<nav class="tm-nav">
+					  <ul>
+						 <li><a href="/">Home</a></li>
+						  <li><a href="/tour">Our Tours</a></li>
+						  <li><a href="/about">About</a></li>
+						  <li><a href="/contact">Login</a></li>
+						</ul>
+				  </nav>		
+				</div>				
+			</div>
+		</div>
+		</div>
 
-    <div class="section">
+<section class="container tm-home-section-1">
+    <div class="section" style="margin-top: 80px;">
         <img src="img/banner-2.jpg" alt="image" class="img-responsive">
         <br>
         <div class="row">				
             <div class="tm-section-header">
+
+                
                 <div class="col-lg-3 col-md-3 col-sm-3"><hr></div>
-                <div class="col-lg-6 col-md-6 col-sm-6"><h2 class="tm-section-title">Thailand</h2></div>
+                <div class="col-lg-6 col-md-6 col-sm-6"><h2 class="tm-section-title"><%=redirectdata.placename%></h2></div>
                 <div class="col-lg-3 col-md-3 col-sm-3"><hr></div>	
             </div>
         </div>
-
-        <div class="container tm-home-section-1">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae omnis aliquid ullam totam quidem dolorem sed! Ad, consectetur quisquam totam, ducimus voluptates voluptatibus alias natus modi itaque, autem rerum sunt explicabo nihil molestias atque quas voluptatem esse aut officiis? Labore reprehenderit odit deleniti nobis doloribus error modi ipsum eaque tempore cumque eum unde, quas reiciendis vitae veritatis accusamus voluptatem, magni, neque repellat ducimus itaque consequuntur fugiat debitis? Temporibus earum, dolor doloremque quasi quos id maxime quis illo in itaque at assumenda molestiae mollitia excepturi, sit autem, impedit cumque ipsam.</p>
-        </div>
     </div>
 
-    <section class="container tm-home-section-1">
-        <div class="section-margin-top">
+    
+        <div class="section">
+             <div class="container tm-home-section-1">
+            <p><%=redirectdata.redirectdescription%></p>
+        </div>
             <div class="row">				
                 <div class="tm-section-header">
                     <div class="col-lg-3 col-md-3 col-sm-3"><hr></div>
@@ -56,7 +79,7 @@
                 </div>
             </div>		
         </div>
-    </section>
+</section>
 
     <a href="/payment" class="tm-tours-box-2-link">Book Now</a>
 
@@ -71,7 +94,7 @@
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>					<!-- bootstrap js -->
 	<script type="text/javascript" src="js/jquery.flexslider-min.js"></script>			<!-- flexslider js -->
 	<script type="text/javascript" src="js/templatemo-script.js"></script>      		<!-- Templatemo Script -->
-	<script>
+	<!-- <script>
         $(function() {
 
 // https://css-tricks.com/snippets/jquery/smooth-scrolling/
@@ -89,6 +112,6 @@ $('a[href*=#]:not([href=#])').click(function() {
 });
   // Google Map
 });
-	</script>
+	</script> -->
 </body>
 </html>
